# faculdade

./: .gitignore  rede_final.pkt
aeds2/: aeds2.sln
aeds2/trabalho_avl/: 1.in  main.c  trabalho_avl.c  trabalho_avl.h  trabalho_avl.vcxproj  trabalho_avl.vcxproj.filters
aeds_1/: search.c  sort.c
aeds_1/aula_02/: analise_01.c  analise_02.c  binary_search.c
aeds_1/exercicios/: exercícios mergesort - pilha de recursão.txt  exercícios quicksort - pilha de recursão.txt
aeds_1/implementacoes/: fila.c  pilha.c  search.c  sort.c
aeds_1/provasaeds1eresolues/: AEDS I PF.txt
aeds_1/trabalho/: Doxyfile  Makefile  cliente.csv  loja.out  produto.csv
aeds_2/: CMakeLists.txt
aeds_2/arvore/: CMakeLists.txt  arvore.c  arvore.h  main.c
aeds_2/implementacoes/: asd.c  bfs.c  la.c  ma.c
aeds_2/trabalho_1/: main.c
aeds_2/trabalho_2/: desrugenstein.c
animacao_digital/: ball_legs_animcacao.blend  ball_legs_animcacao.blend1  cadeira.blend  cadeira.blend1  kombi.blend  kombi.blend1  muro.blend  muro.blend1  wheel.blend  wheel.blend1  xadrez_peao.blend
arquitetura_computadores/: README.md
arquitetura_computadores/lectures/: Random.as  exemplo0.as  exemplo1.as  exemplo2.as  exemplo3.as  exemplo4.as  exemplo5.as  exemploPrintarTela.as  print_string.as  print_string.lis
arquitetura_computadores/space_invaders/: README.md  a.txt  space_invaders.as  (+3 more)
banco_dados/: aula_06.sql
intro_prog/: intro_prog_p1.c  intro_prog_p2.c
programcao_linear/: mistura_petroleo.m  turbina.m  union_airways_scheduling.m
sistema_operacional/: clean  clean.c  main  main.c  main.h  run.txt
(+259 files in other folders)
